--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,7 @@
-*.csharp linguist-detectable=true  
+*.csharp linguist-detectable=true
 *.java linguist-detectable=false  
 *.js linguist-detectable=false  
 *.html linguist-detectable=false  
 *.xml linguist-detectable=false
+*.ipynb linguist-detectable=false
+*.py linguist-detectable=false
